# AugmentaClientSDK-cpp

./: CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES
examples/: Example.cpp
include/: AugmentaClientSDK.hpp  AugmentaServerLib.hpp
src/: AugmentaClientSDK.cpp  AugmentaServerLib.cpp
